<resources>
    <string name="app_name">GameStop</string>
    <string name="gamelogo">logo</string>
    <string name="game_one">GAME ONE</string>
    <string name="check_out">Check Out</string>
    <string name="full_name">FULL NAME</string>
    <string name="checkout_button">CHECK OUT</string>
    <string name="game">GAME</string>
    <string name="one">ONE</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="expiry_date_mm_yy">EXPIRY DATE (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="playstation5">Playstation5</string>
    <string name="sony_playstation_5_console">Sony PlayStation 5 Console</string>
    <string name="price_599_99cad">Price: $599.99CAD</string>
    <string name="microsoft_xbox_series_x">Microsoft XBOX Series X</string>
    <string name="price_499_99cad">Price: $499.99CAD</string>
    <string name="nintendo_switch_2">Nintendo Switch 2</string>
    <string name="price_399_99cad">Price: $399.99CAD</string>
    <string name="buy">BUY</string>
    <string name="welcome">Welcome</string>
</resources>